# -AI-thesis-ai-rewrite-assistant-

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_release.bat  default.yaml.example  pre_release_check.bat  prompt.txt  pyproject.toml  requirements.txt  run_exe.bat  server.py  start.bat  论文.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: RELEASE.md  更新说明.md
paper_rewrite/: __init__.py  cli.py  config.py  core.py  docx_extract.py  llm.py  paths.py  prompt.py  web_app.py
paper_rewrite/resources/: default.yaml.example
paper_rewrite/resources/prompts/: 论文修改助手.txt
paper_rewrite/resources/static/: app.js  style.css
paper_rewrite/resources/templates/: index.html
prompts/: Intelligent_Academic_Expression_Optimization_Advisor.txt  人类作者模拟器.txt  文本改写大师.txt  论文修改专家.txt  论文修改助手.txt  论文润色助手.txt
static/: app.js  style.css
templates/: index.html
tests/: integration_llm_env.py  qa_smoke.py  test_chunking.py  test_smoke.py
